--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
       is my page
     </div>
     <script type="module" src="/src/main.js"></script>
+  <script>
+    let a = 19-1
+    console.log(a)
+  </script>
   </body>
 </html>
